package com.yonatankarp.factorymethod

/**
 * WeaponType enumeration.
 */
internal enum class WeaponType(val title: String) {
    AXE("axe"),
    SHORT_SWORD("short sword"),
    SPEAR("spear"),
    UNDEFINED(""),
;
}
